--- a/configs/plasticity/tiny_remote.yaml
+++ b/configs/plasticity/tiny_remote.yaml
@@ -42,12 +42,13 @@ infrastructure:
     gres: gpu:1
     time: "01:00:00"
 
-eval:
-  do_eval: true
+evaluator:
+  _partial_: true
+  _target_: src.plasticity.eval.Evaluator
   checkpoint_path: ${trainer.checkpoint.save.path}
+  tokenizer: meta-llama/Llama-3.1-8B
   tasks:
     - wikitext
     - piqa
   limit: 3
   device: cpu
-
