--- a/configs/plasticity/basic_exp.yaml
+++ b/configs/plasticity/basic_exp.yaml
@@ -5,6 +5,7 @@ defaults:
   - ../_dataset@_here_: c4
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
+  - ../_eval@_here_: default
 
 common:
   sequence_length: 256
@@ -40,13 +41,4 @@ infrastructure:
     gres: gpu:1
     time: "01:00:00"
 
-evaluator:
-  _partial_: true
-  _target_: src.plasticity.eval.Evaluator
-  checkpoint_path: ${trainer.checkpoint.save.path}
-  tokenizer: meta-llama/Llama-3.1-8B
-  tasks:
-    - wikitext
-    - piqa
-  limit: null
-  device: cpu
+# Use default evaluator settings from _eval/default.yaml
