--- a/configs/tiny_local.yaml
+++ b/configs/tiny_local.yaml
@@ -5,18 +5,23 @@ defaults:
   - _dataset@_here_: local_dummy
   - _checkpoints@_here_: none
   - _misc@_here_: default
-
+  - _eval@_here_: default
 
 common:
   sequence_length: 16
   batch_size: 2
-
+  pretrain: true
+  evaluate: true
 
 trainer:
   gradient_accumulation_steps: 1
   n_steps: 100
-
   learning_rate: 1e-3
+
+  checkpoint:
+    save:
+      type: huggingface
+      path: checkpoint
 
 infrastructure:
   metric_logger:
@@ -26,3 +31,8 @@ infrastructure:
       - local
       - tiny
 
+
+evaluator:
+  # checkpoint_path: checkpoint
+  limit: 3
+  device: cpu
