--- a/configs/tiny_local.yaml
+++ b/configs/tiny_local.yaml
@@ -10,8 +10,6 @@ defaults:
 common:
   sequence_length: 16
   batch_size: 2
-  pretrain: true
-  evaluate: true
 
 trainer:
   gradient_accumulation_steps: 1
@@ -30,3 +28,7 @@ infrastructure:
       - nano
       - local
       - tiny
+
+evaluator:
+  limit: 1
+  device: cpu
