--- a/configs/_cluster/helios.yaml
+++ b/configs/_cluster/helios.yaml
@@ -9,23 +9,27 @@ infrastructure:
     partition: plgrid-gpu-gh200
     time: "2-00:00:00"
 
+    path: "/net/storage/pr3/plgrid/plggllmeffi"
+
   script:
-    - "module load ML-bundle/25.04"
-    - "PROJECT_HOME_PATH=$PLG_GROUPS_STORAGE/plggllmeffi/projected_compression"
-    - |
-      VENV_PATH=$PROJECT_HOME_PATH/pc_venv
-      export HF_HOME=$PROJECT_HOME_PATH/hf_cache
-
-      # Check if venv exists
-      if [ ! -d "$VENV_PATH" ]; then
-        echo 'Virtual environment not found. Creating...'
-        python3 -m venv "$VENV_PATH"
-        pip install --upgrade pip
-      fi 
-      source "$VENV_PATH/bin/activate"
-      pip install --upgrade -r requirements.txt
-
-
+    - 'module load ML-bundle/25.04'
+    - 'PROJECT_HOME_PATH=$PLG_GROUPS_STORAGE/plggllmeffi/nano'
+    - 'export HF_HOME=$PROJECT_HOME_PATH/hf_cache'
+    
+    # hydra errors
+    - 'export HYDRA_FULL_ERROR=1'
+    
+    # export pixi variables
+    - 'export PIXI_HOME=/net/storage/pr3/plgrid/plggllmeffi/nano/pixi'
+    - 'export PATH="$PIXI_HOME/bin:$PATH"'
+    - 'export XDG_DATA_HOME="$PIXI_HOME/data"'
+    - 'export XDG_CACHE_HOME="$PIXI_HOME/cache"'
+    - 'export XDG_STATE_HOME="$PIXI_HOME/state"'
+    
+    # activate pixi
+    - 'cd "$PIXI_HOME"'
+    - 'eval "$(pixi shell-hook)"'
+    - 'cd -'
 
 cluster_switch:
   train_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train"
