--- a/configs/_cluster/entropy_a100.yaml
+++ b/configs/_cluster/entropy_a100.yaml
@@ -1,6 +1,6 @@
 infrastructure:
   server: entropy
-  max_concurrent: null
+  max_concurrent_jobs: null
   slurm:
     cpus_per_gpu: 16
     gres: ???
