--- a/configs/_cluster/helios.yaml
+++ b/configs/_cluster/helios.yaml
@@ -1,6 +1,6 @@
 infrastructure:
   server: helios
-  max_concurrent: null
+  max_concurrent_jobs: null
   slurm:
     cpus_per_gpu: 12
     gres: ???
