--- a/.github/workflows/tiny_test.yml
+++ b/.github/workflows/tiny_test.yml
@@ -18,9 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          python -m pip freeze
 
       - name: Run tiny test
+        if: success() || failure()
         run: |
           python main.py --config-path configs --config-name tiny_local
+        env:
+          NEPTUNE_API_TOKEN: ${{ secrets.NEPTUNE_API_TOKEN }}
