--- a/configs/github_check_runs/test_core.yaml
+++ b/configs/github_check_runs/test_core.yaml
@@ -1,11 +1,11 @@
 defaults:
-  - _cluster@_here_: local
-  - _model@_here_: tiny
-  - _trainer@_here_: llama
-  - _dataset@_here_: local_dummy
-  - _checkpoints@_here_: none
-  - _misc@_here_: default
-  - _eval@_here_: default
+  - ../_cluster@_here_: local
+  - ../_model@_here_: tiny
+  - ../_trainer@_here_: llama
+  - ../_dataset@_here_: local_dummy
+  - ../_checkpoints@_here_: none
+  - ../_misc@_here_: default
+  - ../_eval@_here_: default
 
 common:
   sequence_length: 16
