--- a/.github/workflows/tiny_test.yml
+++ b/.github/workflows/tiny_test.yml
@@ -11,21 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          python -m pip freeze
+          pixi-version: latest
 
       - name: Run tiny test
         if: success() || failure()
         run: |
-          python main.py --config-path configs/github_check_runs --config-name test_core
+          pixi run python main.py --config-path configs/github_check_runs --config-name test_core
         env:
           NEPTUNE_API_TOKEN: ${{ secrets.NEPTUNE_API_TOKEN }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
