--- a/.github/workflows/tiny_test.yml
+++ b/.github/workflows/tiny_test.yml
@@ -11,15 +11,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup pixi
-        uses: prefix-dev/setup-pixi@v0.8.1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          pixi-version: latest
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python -m pip freeze
 
       - name: Run tiny test
         if: success() || failure()
         run: |
-          pixi run python main.py --config-path configs/github_check_runs --config-name test_core
+          python main.py --config-path configs/github_check_runs --config-name test_core
         env:
           NEPTUNE_API_TOKEN: ${{ secrets.NEPTUNE_API_TOKEN }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
