--- a/configs/pc/llama_1B_comp.yaml
+++ b/configs/pc/llama_1B_comp.yaml
@@ -1,6 +1,6 @@
 defaults:
-  # - ../_cluster@_here_: helios #helios
-  - ../_cluster@_here_: entropy
+  - ../_cluster@_here_: helios #helios
+  # - ../_cluster@_here_: entropy
   - ../_model/llama@_here_: projected_1B
   - ../_trainer@_here_: llama
   - ../_dataset@_here_: fineweb
@@ -12,16 +12,21 @@ common:
   sequence_length: 1024
   batch_size: 512
 
-  # dmodel: 448 # 10
-  # dff: 1728
-  dmodel: 960 # 30
-  dff: 3840
+  dmodel: 448 # 10
+  dff: 1728
+  # dmodel: 960 # 30
+  # dff: 3840
   # dmodel: 1344 # 50
   # dff: 5376
   # dmodel: 1728 # 75
   # dff: 6912
   target_dmodel: ${common.dmodel}
   target_dff: ${common.dff}
+
+  # ^smart_init: 
+  #   - svd
+  #   - mpp
+  #   - False
   
 
 
@@ -38,16 +43,16 @@ trainer:
     # - 16384
 
   # learning_rate: 12 # optimal 10%
-  learning_rate: 13 # optimal 30%
+  # learning_rate: 13 # optimal 30%
   # learning_rate: 14 # optimal 1B 50%
   # learning_rate: 15 # optimal 75%
   # learning_rate: 14 #optimal fo randomi 50%
-  # ^learning_rate: 
+  ^learning_rate: 
   #   # - 10
-  #   # - 11
-  #   - 12
-  #   - 13
-  #   - 14
+    - 11
+    - 12
+    - 13
+    # - 14
   #   # - 15
   #   # - 16
   #   # - 17
@@ -59,6 +64,7 @@ trainer:
   checkpoint:
    load:
     type: huggingface
+    # path: null #dev
     path: "meta-llama/Llama-3.2-1B"
     # path: "/net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama1_ta3/llama1_ta3/" # helios ta3b
     # path: /storage_nvme_3/mstefaniak/nano_checkpoints/llama1_ta3/66751/0 # entropy ta10b
@@ -77,31 +83,35 @@ infrastructure:
       - llama_1
       - projected_compression
       # - ta10b
-      # - 10p
-      - 30p
+      - 10p
+      # - 30p
       # - 50p
       # - magnitude
       # - randomi
       # - TEST
+      # - occlusion
+      # - random_occlude
+      # - smart_init
+      # - no_Wa
+      - random_W
+      - REBUTAL
   
-  #helios
-  # server: entropym
   slurm: 
     job-name: ${infrastructure.metric_logger.name}
     gres: gpu:4
     # time: "0-0:15:00"
-    # time: "0-2:30:00"
-    time: "0-8:00:00"
+    time: "0-3:00:00"
+    # time: "0-8:00:00"
     # time: "0-24:00:00"
 
 apply_functions:
   - _target_: src.projected_compression.compression.init_compression
     _partial_: true
-    dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/minitron_dimensions_importances.pt # entropy ACTIVATIONS llama31
+    # dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/minitron_dimensions_importances.pt # entropy ACTIVATIONS llama31
     # dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/random_dimensions_importances.pt # entropy RANDOM llama31
     # dimensions_importances_path: /storage_nvme_3/mstefaniak/nano_checkpoints/tmp/68549/0/magnitude_dimensions_importances.pt # entropy MAGNITUDE llama31
 
-    # dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/minitron_dimensions_importances.pt # #helios ACTIVATIONS llama31
+    dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/minitron_dimensions_importances.pt # #helios ACTIVATIONS llama31
     # dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/random_dimensions_importances.pt # #helios RANDOM llama31
     # dimensions_importances_path: /net/home/plgrid/plgmstefaniak/checkpoints/llama_1_importances/magnitude_dimensions_importances.pt # #helios RANDOM llama31
     
@@ -112,3 +122,4 @@ apply_functions:
     # # dimensions_importances_path: /storage_nvme_3/mstefaniak/nano_checkpoints/tmp/66752/0/random_dimensions_importances.pt # entropy RANDOM ta10
     target_dmodel: ${common.dmodel}
     target_dff: ${common.dff}
+    smart_init: ${common.smart_init}
