--- a/configs/_model/llama/base_pc_model_full.yaml
+++ b/configs/_model/llama/base_pc_model_full.yaml
@@ -9,6 +9,7 @@ common:
   n_blocks: ???
   q_heads: ???
   kv_heads: ???
+  smart_init: False
 
 apply_functions:
   - _target_: src.projected_compression.compression.init_compression
