--- a/configs/_trainer/llama.yaml
+++ b/configs/_trainer/llama.yaml
@@ -20,9 +20,23 @@ trainer:
   distributed:
     fsdp2:
       modules_to_shard: 
-        - ${model.embedding._target_}
-        - ${model.encoder.block_fn._target_}
-        - ${model.head._target_}
+        # - ${model.embedding._target_}
+        # - ${model.encoder.block_fn._target_}
+        # - ${model.head._target_}
+
+
+
+        # - src.projected_compression.mem_eff_model.CompressibleBlock
+
+        - ${model.target_model.embedding._target_}
+        - ${model.target_model.encoder.block_fn._target_}
+        - ${model.target_model.head._target_}
+        - src.projected_compression.mem_eff_model.CompressibleBlock
+        # - src.projected_compression.model.TransformerBlock
+        
+
+  
+        
   
   train_dataloader:
     tokenize_fn:
