--- a/configs/_dataset/default.yaml
+++ b/configs/_dataset/default.yaml
@@ -1,12 +1,28 @@
 trainer:
   train_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset: ???
-    total_batch_size: ${common.batch_size}
+#    dataset_path: ???
+    dataset_split: ???
+#    dataset_type: ???
     num_workers: ???
+    seed: 1000
+    sequence_length: ${common.sequence_length}
+    shuffle: true
+    total_batch_size: ${common.batch_size}
+    use_new_sampling_method: true
+    world_size_independent: false
+    tokenize_fn: ???
 
   eval_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset: ???
-    total_batch_size: ${common.batch_size}
+    dataset_path: ???
+    dataset_split: ???
+    dataset_type: ???
     num_workers: ???
+    seed: 123
+    sequence_length: ${common.sequence_length}
+    shuffle: true
+    total_batch_size: ${common.batch_size}
+    use_new_sampling_method: true
+    world_size_independent: false
+    tokenize_fn: ???
