add skeleton of mixture of datasets with new configuration files and refactor dataset classes

--- a/configs/dataset_mixture_test.yaml
+++ b/configs/dataset_mixture_test.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - _cluster@_here_: entropy
+  - _cluster@_here_: local
   - _model@_here_: tiny
   - _trainer@_here_: llama
   - _dataset@_here_: smollm_corpus
@@ -29,10 +29,6 @@ infrastructure:
       - local
       - tiny
 
-  slurm:
-    job-name: dataset_mixture_test
-    gres: gpu:1
-
-evaluator: null
-#  limit: 1
-#  device: cpu
+evaluator:
+  limit: 1
+  device: cpu
