--- a/configs/_dataset/default.yaml
+++ b/configs/_dataset/default.yaml
@@ -1,8 +1,9 @@
 trainer:
   train_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset_path: ???
+#    dataset_path: ???
     dataset_split: ???
+#    dataset_type: ???
     num_workers: ???
     seed: 1000
     sequence_length: ${common.sequence_length}
@@ -13,9 +14,10 @@ trainer:
     tokenize_fn: ???
 
   eval_dataloader:
-    _target_: src.core.datasets.get_mixture_of_datasets_dataloader
-    datasets: ???
+    _target_: src.core.datasets.get_dataloader
+    dataset_path: ???
     dataset_split: ???
+    dataset_type: ???
     num_workers: ???
     seed: 123
     sequence_length: ${common.sequence_length}
