add skeleton of mixture of datasets with new configuration files and refactor dataset classes

--- a/configs/_dataset/default.yaml
+++ b/configs/_dataset/default.yaml
@@ -1,7 +1,7 @@
 trainer:
   train_dataloader:
-    _target_: src.core.datasets.get_mixture_of_datasets_dataloader
-    datasets: ???
+    _target_: src.core.datasets.get_dataloader
+    dataset_path: ???
     dataset_split: ???
     num_workers: ???
     seed: 1000
