--- a/.github/workflows/run_tests_on_entropy.yml
+++ b/.github/workflows/run_tests_on_entropy.yml
@@ -19,9 +19,15 @@ jobs:
         id: find-configs
         run: |
           # Find all yaml files in configs/pr_tests/ and output as JSON array
+          echo "Searching for configs in configs/pr_tests/..."
+          ls -la configs/pr_tests/ || echo "Directory not found or empty"
+
           configs=$(ls configs/pr_tests/*.yaml 2>/dev/null | xargs -I {} basename {} .yaml | jq -R -s -c 'split("\n") | map(select(length > 0))')
           echo "configs=$configs" >> $GITHUB_OUTPUT
-          echo "Found configs: $configs"
+
+          echo "=== Found PR test configs ==="
+          echo "$configs" | jq -r '.[]'
+          echo "Total: $(echo "$configs" | jq 'length') config(s)"
 
   # Run each config as a separate job
   run-pr-test:
@@ -36,9 +42,12 @@ jobs:
 
       - name: Run PR test - ${{ matrix.config }}
         run: |
+          echo "=== Starting PR test for config: ${{ matrix.config }} ==="
           chmod +x .github/scripts/run_remote_pr_check.sh
           export PR_TEST_CONFIG_NAME="${{ matrix.config }}"
+          echo "Submitting SLURM job..."
           sbatch --wait --job-name="pr_test_${{ matrix.config }}" --export=ALL .github/scripts/run_remote_pr_check.sh
+          echo "SLURM job completed with exit code: $?"
 
       - name: Display SLURM output
         if: always()
