--- a/configs/pr_tests/test_core.yaml
+++ b/configs/pr_tests/test_core.yaml
@@ -1,11 +1,11 @@
 defaults:
-  - _cluster@_here_: entropy_a100
-  - _model@_here_: tiny
-  - _trainer@_here_: llama
-  - _dataset@_here_: c4
-  - _checkpoints@_here_: none
-  - _misc@_here_: default
-  - _eval@_here_: default
+  - ../_cluster@_here_: entropy_a100
+  - ../_model@_here_: tiny
+  - ../_trainer@_here_: llama
+  - ../_dataset@_here_: c4
+  - ../_checkpoints@_here_: none
+  - ../_misc@_here_: default
+  - ../_eval@_here_: default
 
 common:
   sequence_length: 128
