--- a/configs/pr_tests/test_eval.yaml
+++ b/configs/pr_tests/test_eval.yaml
@@ -5,7 +5,7 @@ defaults:
   - ../_dataset@_here_: c4
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
-  - ../_eval@_here_: none
+  - ../_eval@_here_: default
 
 common:
   sequence_length: 128
@@ -29,9 +29,12 @@ infrastructure:
       - nano
       - pr_test
       - core
-      - train
+      - eval_1gpu
 
   slurm:
     time: "00:10:00"
-    gres: gpu:2
+    gres: gpu:1
     job-name: ${infrastructure.metric_logger.name}
+
+eval:
+  limit: 10
