--- a/configs/pr_tests/test_eval.yaml
+++ b/configs/pr_tests/test_eval.yaml
@@ -5,7 +5,7 @@ defaults:
   - ../_dataset@_here_: c4
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
-  - ../_eval@_here_: default
+  - ../_eval@_here_: none
 
 common:
   sequence_length: 128
@@ -36,5 +36,5 @@ infrastructure:
     gres: gpu:1
     job-name: ${infrastructure.metric_logger.name}
 
-eval:
-  limit: 10
+# eval:
+#   limit: 10
