--- a/configs/pr_tests/test_core.yaml
+++ b/configs/pr_tests/test_core.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - ../_cluster@_here_: entropy_a100
+  - ../_cluster@_here_: entropy
   - ../_model@_here_: tiny
   - ../_trainer@_here_: llama
   - ../_dataset@_here_: c4
