--- a/configs/pr_tests/test_eval.yaml
+++ b/configs/pr_tests/test_eval.yaml
@@ -35,6 +35,7 @@ infrastructure:
     time: "00:10:00"
     gres: gpu:2
     job-name: ${infrastructure.metric_logger.name}
+    mem_per_gpu: 100G
 
 # eval:
 #   limit: 10
